# GameFleet

./: .gitignore  Makefile
backend/: .env  Makefile  dependencies.py  main.py  pyproject.toml
backend/api/: docker.py  servers.py
backend/db/: session.py
backend/db/alembic/: env.py
backend/db/models/: game_server.py  game_server_type.py
backend/lib/query/: ark_asa.py  ark_ase.py  factorio.py  minecraft.py  satisfactory.py
backend/services/: game_server_service.py  live_server_info_service.py
backend/src/gamefleet/: dependencies.py  main.py
backend/src/gamefleet/api/: servers.py
backend/src/gamefleet/db/: session.py
backend/src/gamefleet/db/alembic/: env.py
backend/src/gamefleet/db/models/: game_server.py
backend/src/gamefleet/lib/query/: ark_asa.py  ark_ase.py  factorio.py  minecraft.py  satisfactory.py
backend/src/gamefleet/models/: server_info.py
backend/src/gamefleet/services/: game_server_service.py  live_server_info_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/api/: Api.ts  ApiService.ts
frontend/src/routes/main/: +page.svelte
